tests/bad/value_enums/shared_field_missing_constructor.oc
/// fail: Expected `x` with type i32, but got str

enum Foo {
    x: i32
    y: i32

    FooA(str)
    FooB(untyped_ptr)
    FooC
}

def main() {
    let a = Foo::FooA("hello")
}